// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders correctly 1`] = `
<input
  className="uk-input "
/>
`;

exports[`Input renders correctly 2`] = `
<input
  className="uk-input uk-search-field"
  type="search"
/>
`;

exports[`Input renders correctly 3`] = `
<input
  className="uk-input  uk-form-danger"
/>
`;

exports[`Input renders correctly 4`] = `
<input
  className="uk-input  uk-form-success"
/>
`;

exports[`Input renders correctly 5`] = `
<input
  className="uk-input  uk-form-blank"
/>
`;

exports[`Input renders correctly 6`] = `
<input
  className="uk-input  uk-form-large"
/>
`;

exports[`Input renders correctly 7`] = `
<input
  className="uk-input  uk-form-small"
/>
`;

exports[`Input renders correctly 8`] = `
<input
  className="uk-input  uk-width-1-1"
/>
`;

exports[`Input renders correctly 9`] = `
<input
  className="uk-input  uk-form-width-large"
/>
`;

exports[`Input renders correctly 10`] = `
<input
  className="uk-input  uk-form-width-medium"
/>
`;

exports[`Input renders correctly 11`] = `
<input
  className="uk-input  uk-form-width-small"
/>
`;

exports[`Input renders correctly 12`] = `
<input
  className="uk-input  uk-form-width-mini"
/>
`;

exports[`Input renders correctly 13`] = `
<div
  className="uk-form-icon"
>
  <i
    className="uk-icon-calendar"
  />
  <input
    className="uk-input "
  />
</div>
`;

exports[`Input renders correctly 14`] = `
<div
  className="uk-form-icon uk-form-icon-flip"
>
  <i
    className="uk-icon-calendar"
  />
  <input
    className="uk-input "
  />
</div>
`;

exports[`Input renders correctly 15`] = `
<div
  className="uk-form-icon"
>
  <i
    className="uk-icon-spinner uk-icon-spin"
  />
  <input
    className="uk-input "
  />
</div>
`;

exports[`Input renders correctly 16`] = `
<div
  className="uk-form-icon uk-form-icon-flip"
>
  <i
    className="uk-icon-refresh uk-icon-spin"
  />
  <input
    className="uk-input "
  />
</div>
`;
